# flight-analysis

./: .gitignore  LICENSE  README.md  SCOPING.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  side_test.py
.circleci/: config.yml
.github/workflows/: ci.yml  publish-test.yml  publish.yml  scrape.yml
.github/workflows/scripts/: release.py
google_flight_analysis/: cache.py  scrape.py
src/google_flight_analysis/: __init__.py  analysis.py  cache.py  config.py  flight.py  scrape.py
src/google_flight_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/google_flight_analysis/analyze/: analysis.py
src/google_flight_analysis/cache/: __init__.py  cache.py
src/google_flight_analysis/cli/: __init__.py  commands.py  main.py
src/google_flight_analysis/config/: config.py
src/google_flight_analysis/db/: __init__.py  database.py  models.py
src/google_flight_analysis/legacy/: __init__.py  config.py  flight.py  scrape.py
src/google_flight_analysis/scrape/: __init__.py  chrome_wrapper.py  driver.py  route.py  scrape.py
tests/: conftest.py  test_class.py  test_config.py  test_db.py  test_scrape.py
tests/test_data/: CDG-IST.csv  LGA-RDU.csv  test1.csv  test2.csv
tests/test_data/.access/: LGA-RDU.txt
workflows/: release.yml
