[metadata]
name = google-flight-analysis
author = Kaya Celebi
author_email = kayacelebi17@gmail.com
description = Scraping flight data from Google Flights and analyzing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kcelebi/flight_analysis
project_urls =
    Bug Tracker = https://github.com/kcelebi/flight_analysis/issues
    Changelog = https://github.com/kcelebi/flight_analysis/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    tqdm
    numpy
    pandas
    selenium
    sqlalchemy
    chromedriver-autoinstaller

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flight_analysis = flight_analysis.app:entry_point