[metadata]
name = google-flight-analysis
author = Kaya Celebi
author_email = kayacelebi17@gmail.com
description = Scraping flight data from Google Flights and analyzing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kcelebi/flight_analysis
project_urls =
    Bug Tracker = https://github.com/kcelebi/flight_analysis/issues
    Changelog = https://github.com/kcelebi/flight_analysis/releases
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    tqdm
    numpy
    pandas
    selenium
    sqlalchemy
    click
    chromedriver-autoinstaller

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flight-cli = google_flight_analysis.cli.main:main